fix toggle alignment  on older browser

--- a/scss/components/form/_toggle.scss
+++ b/scss/components/form/_toggle.scss
@@ -5,8 +5,10 @@
 @mixin toggleSize($size) {
   & + label {
     &::before {
-      min-width: $size * .7;
-      height: $size * .7;
+      $toggler-size: $size * .7;
+      top: calc(50% - (#{$toggler-size} / 2));
+      min-width: $toggler-size;
+      height: $toggler-size;
       transform: translate3d(($size * .2), 0, 0);
     }
     &::after {
@@ -41,6 +43,7 @@
 
       &::before {
         position: absolute;
+        left: 0;
         content: '';
         @include generateProperties(oo('toggle.toggler'));
       }
